# mysql-cluster-ndb-bindings

./: README.md  compile.txt  run_sample.txt
ndb-bindings-0.7.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  compile.linux.sh  compile.mac.sh  config.h.in  configure  configure.ac
ndb-bindings-0.7.1/cpp/: Makefile.am  Makefile.in  OutOfConnectionProblemTest.cpp  ndbapi_scan.cpp  ndbapi_simple_index.cpp  testabort.cpp  testchars.cpp  testdateins.cpp  testdecimal.cpp  testprog.cpp  testscan.cpp  teststrins.cpp
ndb-bindings-0.7.1/csharp/: Makefile.am  Makefile.in  MySql.Cluster.MgmApi.dll.config  MySql.Cluster.NdbApi.dll.config  bindings.snk  mgmapi.i  ndbapi.i
ndb-bindings-0.7.1/csharp/mgmapi/: AssemblyInfo.cs  MgmExceptions.cs
ndb-bindings-0.7.1/csharp/ndbapi/: AssemblyInfo.cs  BaseCallback.cs  NdbDateTimeHelper.cs  NdbExceptions.cs
ndb-bindings-0.7.1/csharp/test/: Test.cs
ndb-bindings-0.7.1/interface/: globals.i
ndb-bindings-0.7.1/interface/mgmapi/: ClusterState.i  NdbLogEvent.i  NdbLogEventManager.i  NdbMgm.i  NdbMgmReply.i  NodeState.i  events.i  listeners.i  mgmenums.i  mgmglobals.i
ndb-bindings-0.7.1/interface/ndbapi/: Ndb.i  NdbBlob.i  NdbClusterConnection.i  NdbDictionary.i  NdbError.i  NdbEventOperation.i  NdbIndexOperation.i  NdbIndexScanOperation.i  NdbOperation.i  NdbRecAttr.i  NdbScanFilter.i  NdbScanOperation.i  NdbTransaction.i  ndbglobals.i
ndb-bindings-0.7.1/java/: Events.i  Listeners.i  Makefile.am  Makefile.in  Mgmj.i  Ndbj.i  build.xml  ndbj.props.in
ndb-bindings-0.7.1/java/src/java/com/mysql/cluster/mgmj/: AllocIDConfigMismatch.java  AllocIDError.java  BindAddressError.java  ClusterState.java  CouldNotAbortBackup.java  CouldNotConnectToSocket.java  CouldNotEnterSingleUserMode.java  CouldNotExitSigleUserMode.java  CouldNotStartBackup.java  IllegalConnectString.java  IllegalNodeStatus.java  IllegalNumberOfNodes.java  IllegalServerHandle.java  IllegalServerReply.java  NdbLogEvent.java  NdbLogEventManager.java  NdbMgm.java  NdbMgmException.java  NdbMgmFactory.java  NdbMgmFilterListImpl.java  NdbMgmReply.java  NodeState.java  (+7 more)
ndb-bindings-0.7.1/java/swig/: AbortOption.i  BackupWrapper.i  BaseEventWrapper.i  ClusterState.i  CommitStatusType.i  ExecType.i  LockMode.i  Ndb.i  NdbBlob.i  NdbClusterConnection.i  NdbDateTime.i  NdbDictionary.i  NdbError.i  NdbErrorDoc.i  NdbEventOperation.i  NdbIndexOperation.i  NdbIndexScanOperation.i  NdbMgm.i  NdbOperation.i  NdbRecAttr.i  NdbScanFilter.i  NdbScanOperation.i  NdbTransaction.i  asynch_callback_t.i  byte_array.i  decimal.i  input_string.i  mgm_exception.i  names_array.i  ndb_exception.i  node_list.i  timestamp.i  voidint.i
ndb-bindings-0.7.1/java/test/java/testsuite/: BaseMgmjTestCase.java  BaseNdbjTestCase.java  BaseTestCase.java  TestCallback.java
ndb-bindings-0.7.1/java/test/java/testsuite/mgmj/: AllTests.java  BackupRestoreTest.java  ClusterAndNodeStateTest.java  EnterAndExitSingleUserModeTest.java  EventLogListenerTest.java  EventMemoryListenerTest.java  EventTransactionCountsTest.java  MemoryListener.java  MgmNodeFailoverTest.java  NdbStartStartedListener.java  NdbStopCompletedListener.java  NdbStopStartedListener.java  NodeFailedListener.java  OperationsReportListener.java  RestartNodeTest.java  StopNodeTest.java  TransactionReportListener.java  TypeRestartListener.java
ndb-bindings-0.7.1/java/test/java/testsuite/ndbj/: AllTests.java  AsyncTest.java  BasicTest.java  DateTimeTest.java  DecimalTest.java  ImmediatePollTimeoutTest.java  IncrementTest.java  InsertRetryTest.java  InvalidSchemaObjectVersionTest.java  Latin1InsertReadTest.java  MultiPartPrimaryKeyStringTest.java  MultipleAsyncTest.java  NdbBlobTest.java  NdbOperationByteLongTest.java  NdbOperationIDTest.java  NdbOperationMultiPartPrimaryKeyTest.java  NdbOperationTest.java  NdbOperationsFailedTest.java  NdbScanFilterTest.java  NdbScanTest.java  NullSetTest.java  OrderedIndexScanTest.java  OutOfConnectionProblemTest.java  QuickBFTest.java  SelectCountTest.java  Utf8InsertReadTest.java
ndb-bindings-0.7.1/lua/: Makefile.am  Makefile.in  mgmapi.i  ndbapi.i
ndb-bindings-0.7.1/m4/: ac_check_class.m4  ac_pkg_swig.m4  ac_python_devel.m4  ac_try_compile_java.m4  java.m4  javaversion.m4  with_csharp.m4  with_java.m4  with_lua.m4  with_mysql.m4  with_perl.m4  with_php.m4  with_python.m4  with_ruby.m4
ndb-bindings-0.7.1/mgmpp/: Makefile.am  Makefile.in  NdbEventListener.cpp  NdbEventListener.hpp  events.cpp  events.hpp  libmgmpp.h  listeners.cpp  listeners.hpp
ndb-bindings-0.7.1/ndbpp/: Makefile.am  Makefile.in  libndbpp.h  ndbdate.cpp  util.cpp
ndb-bindings-0.7.1/perl/: Makefile.PL  Makefile.am  Makefile.in  async.pl  blob.pl  mgmapi.i  ndbapi.i  test.pl
ndb-bindings-0.7.1/perl/mgmapi/: Makefile.PL
ndb-bindings-0.7.1/perl/ndbapi/: Makefile.PL
ndb-bindings-0.7.1/perl/swig/: perl_callback_typemap.i  perl_extend_ndbrecattr.i  perl_extend_ndbtransaction_async.i  perl_ndbrecattr_typemap.i
ndb-bindings-0.7.1/php/: Makefile.am  Makefile.in  mgmapi.i  ndbapi.i
ndb-bindings-0.7.1/python/: MANIFEST.in  Makefile.am  Makefile.in  PKG-INFO  README  events.i  ez_setup.py  listeners.i  mgmapi.i  ndbapi.i  setup.py
ndb-bindings-0.7.1/python/examples/: alchemy.py  async.py  batchupdate.py  checkdattime.py  compare.py  joinperf.py  mgm.py
ndb-bindings-0.7.1/python/mysql/cluster/: alchemy.py
ndb-bindings-0.7.1/python/swig/: callback.i  datetime.i  decimal.i  exception.i  init.i  mgmexception.i  mgminit.i  module_pythoncode.i  ndboperation.i  recattr_getvalue.i
ndb-bindings-0.7.1/python/tests/: AllTests.py  ClusterTestCase.py  shared_cluster_connection.py
ndb-bindings-0.7.1/python/tests/ndbapi/: BasicTest.py  DecimalTest.py  InsertRetryTest.py  InvalidSchemaObjectVersion.py  NdbColumn.py  NdbTest.py  TempLock.py  __init__.py
ndb-bindings-0.7.1/ruby/: Makefile.am  Makefile.in  mgmapi.i  ndbapi.i  test.rb  testasync.rb  testdt.rb  testmgm.rb  testreaddt.rb  testselectcount.rb
ndb-bindings-0.7.1/ruby/test/: runner.rb
ndb-bindings-0.7.1/xml/: Makefile.am  Makefile.in  mgmapi.i  ndbapi.i
(+74 files in other folders)
